# obscuravpn-client

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .swiftformat  Cargo.toml  README.md  about.toml  flake.nix  justfile  rust-toolchain.toml  rustfmt.toml  sgconfig.yml  tag.json  taplo.toml
.cargo/: config.toml
.github/workflows/: checks.yml  windows-build.yml
android/: .gitignore  build.gradle.kts  deps.json  detekt.yml  gradle.properties  lint.xml  settings.gradle.kts
android/app/: build.gradle.kts  google-services.json
android/buildSrc/: build.gradle.kts  settings.gradle.kts
android/gradle/: libs.versions.toml
apple/: ExportOptions.plist  cbindgen-apple.toml
apple/Configurations/: .gitignore  Base.xcconfig  Debug-app-network-extension.xcconfig  Debug-app.xcconfig  Debug-system-network-extension.xcconfig  Debug.xcconfig  Release-app-network-extension.xcconfig  Release-app.xcconfig  Release-system-network-extension.xcconfig  Release.xcconfig  app-network-extension.xcconfig  app.xcconfig  bundle-ids.xcconfig  system-network-extension.xcconfig
apple/Packet Tunnel Provider/: Keychain.swift  NetworkSettings.swift  PacketTunnelProvider.swift  RustFfi.swift
apple/app-network-extension/: Info.plist  PacketTunnelProvider.swift  entitlements.entitlements
apple/client/: Account.swift  CheckForUpdatesView.swift  ClientApp.swift  Constants.swift  ContentView.swift  DebugBundle+XP.swift  DebugBundle.swift  DebugBundleExtensionInfo.swift  Info.plist  LoginItem.swift  LoopingVideoPlayer.swift  Notifications.swift  OSLogEntryEncodable.swift  ObscuraWebViewSwiftUIWrapper.swift  OsStatus.swift  ScriptMessageHandlers.swift  StartupStatus.swift  TunnelProvider.swift  UpdaterDriver+XP.swift  UpdaterDriver.swift  WebView.swift  app_state.swift  client-ios.entitlements  client-macos.entitlements  client.entitlements  command.swift  iOSClientApp.swift  initNetworkExtension.swift  startup.swift
apple/client.xcodeproj/: project.pbxproj
apple/dmg-building/: installer_background.tiff
apple/libobscuravpn_client/: .gitignore
apple/obscuravpn-client.xcodeproj/: project.pbxproj
apple/shared/: Account+CustomStringConvertible.swift  Account.swift  AccountInfo+Util.swift  Box.swift  Concurrency.swift  ConcurrencyTests.swift  Debug.swift  FfiCb.swift  InfoDict.swift  Json.swift  NetworkExtensionIpc.swift  NotificationIds.swift  ObservableValue.swift  String.swift  StringError.swift  Swift.swift  WatchableValue.swift  time.swift
apple/system-network-extension/: Info.plist  NetworkSettings.swift  PacketTunnelProvider.swift  RustFfi.swift  entitlements.entitlements  main.swift
apple/videos/: macOS 14 System Extension Demo.mov  macOS 15 System Extension Demo.mov
apple/webview_content/: index.html  index.js
apple/xcodescripts/: cargo-build-static-lib.bash  nix-build-web-bundle.bash  nix-cbindgen.bash  nix-web-dev-server-start.bash  nix-web-dev-server-stop.bash  pre-action.bash  set-build-info.bash
contrib/: licenses.mjs  skip-if-fresh.ps1
contrib/sg-rules/: missing-message-id-instrument.yml  missing-message-id-macro.yml
contrib/shell/: source-die.bash  source-echoerr.bash  source-gpg-helpers.bash  source-nix.sh  source-require-args.bash
linux/: arch_Dockerfile  arch_PKGBUILD  build_Dockerfile  deb_Dockerfile  deb_control  deb_install  deb_postinstall.sh  deb_rules  nfpm.yaml  obscura-preset.conf  obscura-sysusers.conf  obscura.service  obscuravpn.service  rpm_Dockerfile  rpm_obscura.spec  rpm_postinstall.sh  rpm_preremove.sh  rpm_rpmlintrc  rpm_systemd.preset
linux/arch/: Dockerfile  PKGBUILD  finalize.sh  obscura-keyring.install  per_arch.sh
linux/common/: net.obscura.vpn.gui.desktop
linux/deb/: Dockerfile  control  finalize.sh  per_arch.sh  rules
linux/rpm/: Dockerfile  finalize.sh  obscura-package-signing-key-refresh.bash  obscura-package-signing-key-refresh.service  obscura-package-signing-key-refresh.timer  obscura-repository-preset.conf  obscura.spec  per_arch.sh  rpmlintrc
linux/signing_keys/: current.public.asc  next.public.asc  rotate_signing_key.bash
linux/signing_keys_test/: current.private.asc  current.public.asc  next.public.asc
linux/vm/: almalinux10-desktop.ks  debian-desktop.preseed.cfg  fedora43-desktop.ks  fedora44-desktop.ks
nix/overlays/: default.nix
nix/pkgs/: create-dmg.nix
obscura-ui/: .gitignore  README.md  index.html  justfile  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite-env.d.ts  vite.config.js  vite.config.ts
obscura-ui/public/: index.css
obscura-ui/src/: App.jsx  App.module.css  App.tsx  Providers.jsx  Providers.tsx  Secrets.tsx  index.css  main.jsx  main.tsx  (+1 more)
rustlib/: .gitignore  Cargo.toml  about.toml  build.rs  gen-gresource-xml.py  rust-toolchain.toml
rustlib/.cargo/: config.toml
rustlib/examples/: connect.rs  list-relay-rtts.rs
rustlib/src/: backoff.rs  backoff_test.rs  cached_value.rs  client_state.rs  constants.rs  dns.rs  errors.rs  exit_selection.rs  ffi_helpers.rs  lib.rs  linux.rs  liveness.rs  local_network.rs  logging.rs  manager.rs  manager_cmd.rs  net.rs  network_config.rs  positive_u31.rs  quicwg.rs  rate_limited_log.rs  relay_selection.rs  serde_safe.rs  tokio.rs  tunnel_state.rs  virt.rs  wake_instant.rs
rustlib/src/android/: class_cache.rs  ffi.rs  future.rs  mod.rs  os_impl.rs  tunnel.rs  util.rs
rustlib/src/apple/: ffi.rs  ios.rs  mod.rs  os_impl.rs
rustlib/src/config/: cached.rs  dns_cache.rs  feature_flags.rs  mod.rs  persistence.rs  persistence_test.rs
rustlib/src/debug_archive/: builder.rs  dns.rs  http.rs  info.rs  mod.rs  task.rs  zipper.rs
rustlib/src/debug_bundle/: builder.rs  bundle_info.rs  debug_info.rs  dns.rs  http.rs  info.rs  mod.rs  task.rs
rustlib/src/gui/: icons.gresource.xml  main.rs  wip.rs
rustlib/src/linux/: exit_list_watch.rs  mod.rs  status.rs  status_watch.rs  tray.rs
rustlib/src/os/: mod.rs  os_trait.rs
rustlib/src/wg_key_store/: linux.rs  mod.rs  windows.rs
src/: client_state.rs  errors.rs  ffi_helpers.rs  lib.rs  manager.rs  manager_cmd.rs  net.rs  quicwg.rs  relay_selection.rs
windows/: .gitignore
xtask/: Cargo.toml
(+326 files in other folders)
