[package]
name = "obscuravpn-client"
version = "0.1.0"
edition = "2024"
license = "PolyForm-Noncommercial-1.0.0"

[[bin]]
name = "obscuravpn"

[lib]
crate-type = ["cdylib", "lib", "staticlib"]

[profile.release]
codegen-units = 1
debug = "line-tables-only"
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[lints.clippy]
type_complexity = "allow"
large_enum_variant = "allow"
too_many_arguments = "allow"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
base64 = "0.21.7"
bytes = "1"
chrono = "0.4.37"
clap = { version = "4.5.53", features = ["derive"] }
const_format = "0.2.35"
derive_more = {  version = "2.0.1", features = ["full"] }
etherparse = "0.17.0"
flume = { version = "0.11.1", features = ["async"] }
futures = "0.3.29"
ipnetwork = { version =  "0.21.1", features = ["serde"] }
rand = "0.8.5"
ring = "0.17.14"
rustls = "0.23.28"
semver = "1.0.27"
serde = { version = "1.0.197", features = ["derive", "rc"] }
serde_json = "1.0.114"
serde_with = { version = "3.12", features = ["base64"] }
socket2 = { version = "0.6.0", features = ["all"] }
static_assertions = "1.1.0"
strum = { version = "0.26.2", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.56"
tokio = { version = "1.44", features = ["full"] }
tokio-rustls = "0.26.2"
tokio-util = "0.7.13"
tun-rs = {  version = "2.7.5", features = ["async"]}
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
x25519-dalek = { version = "2.0.1" }

[dependencies.boringtun]
package = "neptun"
git = "https://github.com/Sovereign-Engineering/boringtun.git"
rev = "ff3b5555b5b1c4f85ae23d8d4aaf00bea2cd2bf0"

[dependencies.obscuravpn-api]
git = "https://github.com/Sovereign-Engineering/obscuravpn-api.git"
rev = "15c61632b418001b7e0e0bbb98373d8437a20d01"

[dependencies.quinn]
git = "https://github.com/Sovereign-Engineering/quinn.git"
rev = "8f690a22535dcf2d76c369cadd3f0bec93667a4d"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
oslog = "0.2.0"
tracing-oslog = "0.3.0"
aws-lc-rs = { version = "*", features = ["bindgen"] } # We don't use directly, but need to enable this feature.

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.178"
rtnetlink = "0.18.1"
zbus = "5.12.0"
zbus_systemd = {  version="0.25800.0", features = ["resolve1"] }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21.1", default-features = false }
nix = "0.30.1"
tracing-android = "0.2.0"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
logroller = { version = "0.1.10", features = ["xz"] }

[build-dependencies]
cbindgen = "0.28.0"
